# chessplate

./: .gitignore  CMakeLists.txt  README.md
Headers/: chess.h
